@@ -3,6 +3,7 @@ v0.7 - Pending
 	+ Backspace shortcut to navigate to parent dir in library
 	+ Show previous instance if user tries to open a second
 	  instance of Sonata [Mike Massonnet patch]
+	+ --toggle argument for the app's visibility (requires dbus)
 
 v0.6 - September 18, 2006
 	+ Add support for playlists (save, load, queue, delete)
